--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
 	</nav>
 	<main>
 		<h1>Hi I'm Esteban</h1>
+		<p>I'm a <em>Systems (and telecomunications) Engineer</em>, and an aspiring backend developer</p>
 		<p>(This site is under construction...)</p>
+
+		<h2>Some stuff i've done (mostly for university):</h2>
+		<ul>
+			<li><a target="_blank" href="https://github.com/oldarkdesu/dots">My personal <em>dotfiles</em></a></li>
+			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/yelp-camp">Yelp Camp (from a course)</a></li>
+			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/ttt-test">Tic tac toe (from React's tutorial)</a></li>
+			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/mvc-demo">Simple toy app for showing the MVC design pattern</a></li>
+			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/mui-takehome">A small react app using MUI's Datagrid (from a nextjs template project)</a></li>
+			<li><a target="_blank" href="https://ergokeebs.vercel.app/">A small e-commerce site</a></li>
+		</ul>
 	</main>
 	<footer>
 		Made by <a href="https://github.com/ebzuluaga">Esteban Beodya</a>
