add a hidden text to test height/width stuff

--- a/index.html
+++ b/index.html
@@ -23,18 +23,56 @@
 	</nav>
 	<main>
 		<h1>Hi I'm Esteban</h1>
-		<p>I'm a <em>Systems (and telecomunications) Engineer</em>, and an aspiring backend developer</p>
+		<p>I'm a <em>Systems (and telecomunications) Engineer</em>, and an aspiring developer/systems administator</p>
 		<p>(This site is under construction...)</p>
 
 		<h2>Some stuff i've done (mostly for university):</h2>
 		<ul>
 			<li><a target="_blank" href="https://github.com/oldarkdesu/dots">My personal <em>dotfiles</em></a></li>
-			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/yelp-camp">Yelp Camp (from a course)</a></li>
-			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/ttt-test">Tic tac toe (from React's tutorial)</a></li>
-			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/mvc-demo">Simple toy app for showing the MVC design pattern</a></li>
-			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/mui-takehome">A small react app using MUI's Datagrid (from a nextjs template project)</a></li>
 			<li><a target="_blank" href="https://ergokeebs.vercel.app/">A small e-commerce site</a></li>
+			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/mui-takehome">A small react app using MUI's Datagrid (from a nextjs template project)</a></li>
+			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/ttt-test">Tic tac toe (from React's tutorial)</a></li>
+			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/yelp-camp">Yelp Camp (from a course)</a></li>
+			<li><a target="_blank" href="https://github.com/estebanbedoyazuluaga/mvc-demo">Simple toy app for showing the MVC design pattern</a></li>
 		</ul>
+
+		<p hidden> Are you reading this? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero doloribus ea dicta nostrum sequi,
+			sapiente accusamus cumque eveniet, magni laborum ullam unde impedit dolorum sit aliquid tempora. Iusto
+			excepturi nihil soluta fugit cumque quod exercitationem modi repudiandae? Odio distinctio quam modi est
+			explicabo vero delectus illo aspernatur, dolores numquam. Optio facere praesentium, possimus esse deleniti
+			neque aliquid tempore totam eius nam assumenda culpa delectus eum recusandae, rem nulla dolore reprehenderit
+			iure doloribus expedita quod fuga! Odio, dolorem explicabo. Enim consectetur eveniet est nam, omnis sint rem
+			ratione ipsa magnam nihil quia pariatur, beatae ab maxime blanditiis neque architecto? Error, praesentium.
+			Fuga incidunt possimus sequi sed labore aspernatur laudantium aperiam, porro quas obcaecati quaerat, magnam
+			magni! Neque a molestias eligendi doloremque sapiente quas consequuntur minima. Accusamus est, nesciunt
+			ipsum eaque odio eos sed accusantium, asperiores enim qui suscipit numquam voluptate molestias porro rem,
+			reiciendis ad quisquam architecto placeat atque dicta. Necessitatibus ipsum, esse corporis libero id
+			voluptatibus nisi tempora? Corrupti, optio? Vitae officia placeat unde maiores corporis animi, quaerat
+			impedit est debitis dolor mollitia labore doloremque iusto molestiae? Commodi nesciunt dolor laborum
+			suscipit, amet molestias. Dicta id commodi non quis vel, dolore qui eum labore fugit autem vero incidunt rem
+			fugiat nobis pariatur sunt blanditiis veritatis reiciendis nulla harum quidem repudiandae, perspiciatis
+			dolorem in! Voluptatum voluptatibus commodi similique fugit nostrum harum perferendis esse, ullam, vel nam,
+			facilis id magni omnis dignissimos sint dolores. Odit earum deleniti molestias reprehenderit, atque
+			officiis, temporibus cum vel beatae, vero sapiente sed. Corporis delectus tenetur repellendus deserunt
+			eveniet officiis architecto consequatur labore magni? Veniam enim ipsa aliquid consequatur dolor doloribus,
+			harum velit hic ducimus exercitationem. Modi ipsam iure ipsum repellat impedit ab porro vitae, iusto tenetur
+			ad asperiores nam maxime laboriosam fugiat exercitationem omnis error maiores ea magni est? Minima totam
+			dolor facilis iure dolorem nostrum quisquam amet, itaque ex impedit odio. Soluta temporibus nulla
+			repudiandae cum quibusdam consequuntur magni sapiente, quae ab repellat. Quo facere rem alias libero
+			voluptates doloribus similique odio possimus aperiam beatae. Placeat, atque recusandae, optio, itaque unde
+			quidem pariatur inventore nulla omnis accusantium temporibus et possimus. Sed numquam reprehenderit aliquam
+			possimus, maxime quisquam odio dolorum aspernatur! Consectetur amet numquam omnis in sequi sit perferendis
+			repellendus! Illum alias nobis sequi nihil, sunt aliquid hic doloremque reprehenderit magnam voluptas eos
+			adipisci fuga consectetur, aspernatur dolore tempore delectus. Modi beatae dolorem, doloribus optio sequi
+			voluptate quas. Quibusdam ipsam odio et quam sit esse, reprehenderit ut molestiae recusandae odit sint
+			labore doloribus iste, voluptatum possimus minus sunt tenetur ad nisi quia, corporis aut repellendus? Culpa
+			ipsum perferendis sunt neque quidem necessitatibus error nostrum id? Nemo nihil quo ex tempore nobis dicta
+			neque, itaque saepe, magni corporis quasi? Tempore error placeat, consequuntur harum, assumenda dolor culpa
+			beatae excepturi, sint distinctio ad voluptatum neque tenetur similique ea id voluptas temporibus cum.
+			Excepturi repellendus vero aut dolorum tempore deleniti voluptates eum mollitia at quam voluptatum
+			recusandae, doloremque suscipit, praesentium voluptas illo corrupti ullam? Debitis pariatur ab nisi officiis
+			non numquam ratione incidunt delectus eos molestiae. Saepe, iusto odio.</p>
+
 	</main>
 	<footer>
 		Made by <a href="https://github.com/ebzuluaga">Esteban Beodya</a>
