--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 	<nav class="navbar">
 		<div class="left">
 			<div class="logo animate"></div>
+			<div class="nav-link animate"><a href="#">Contact 1</a></div>
+			<div class="nav-link animate"><a href="#">Contact 2</a></div>
+			<div class="nav-link animate"><a href="#">Contact 3</a></div>
 		</div>
 		<div class="right">
-			<div class="nav-link animate"><a href="index.html">Homepage</a></div>
+			<div class="nav-link animate"><a href="/index.html">Homepage</a></div>
+			<div class="nav-link animate"><a href="/boxes.html">Box</a></div>
+			<div class="nav-link animate"><a href="/colors.html">Colors</a></div>
 			<div class="nav-link animate"><a href="#">Foo</a></div>
-			<div class="nav-link animate"><a href="#">bar</a></div>
-			<div class="nav-link animate"><a href="#">Blah</a></div>
 		</div>
 	</nav>
 	<main>
@@ -77,4 +80,7 @@
 	<footer>
 		Made by <a href="https://github.com/ebzuluaga">Esteban Beodya</a>
 	</footer>
+	<script>
+		
+	</script>
 </body>
