--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</nav>
 	<main>
 		<h1>Hi I'm Esteban</h1>
-		<p>I'm a <em>Systems (and telecomunications) Engineer</em>, and an aspiring developer/systems administator</p>
+		<p>I'm a <em>Systems (and telecomunications) Engineer</em>, and an aspiring software developer/sysadmin</p>
 		<p>(This site is under construction...)</p>
 
 		<h2>Some stuff i've done (mostly for university):</h2>
