lazyly committing all changes...

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<p>I'm a <em>Systems (and telecomunications) Engineer</em>, and an aspiring software developer/sysadmin</p>
 		<p>(This site is under construction...)</p>
 
-		<h2>Some stuff i've done (mostly for university):</h2>
+		<h2>Some stuff I've done (mostly for university):</h2>
 		<ul>
 			<li><a target="_blank" href="https://github.com/oldarkdesu/dots">My personal <em>dotfiles</em></a></li>
 			<li><a target="_blank" href="https://ergokeebs.vercel.app/">A small e-commerce site</a></li>
