navbar and footer now get initialized via JS, plus a few other changes

--- a/index.html
+++ b/index.html
@@ -5,25 +5,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="styles.css" rel="stylesheet" />
-	<title>index</title>
+	<script defer src="/script.js"></script>
+	<title>Index</title>
 </head>
 
 <body>
 
-	<nav class="navbar">
-		<div class="left">
-			<div class="logo animate"></div>
-			<div class="nav-link animate"><a href="#">Contact 1</a></div>
-			<div class="nav-link animate"><a href="#">Contact 2</a></div>
-			<div class="nav-link animate"><a href="#">Contact 3</a></div>
-		</div>
-		<div class="right">
-			<div class="nav-link animate"><a href="/index.html">Homepage</a></div>
-			<div class="nav-link animate"><a href="/boxes.html">Box</a></div>
-			<div class="nav-link animate"><a href="/colors.html">Colors</a></div>
-			<div class="nav-link animate"><a href="#">Foo</a></div>
-		</div>
-	</nav>
+	<nav id="top-nav-bar" class="navbar"></nav>
 	<main>
 		<h1>Hi I'm Esteban</h1>
 		<p>I'm a <em>Systems (and telecomunications) Engineer</em>, and an aspiring software developer/sysadmin</p>
@@ -77,10 +65,5 @@
 			non numquam ratione incidunt delectus eos molestiae. Saepe, iusto odio.</p>
 
 	</main>
-	<footer>
-		Made by <a href="https://github.com/ebzuluaga">Esteban Beodya</a>
-	</footer>
-	<script>
-		
-	</script>
+	<footer id="footer"></footer>
 </body>
