--- a/boxes.html
+++ b/boxes.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
 	<script defer src="/script.js"></script>
+	<script defer src="/include.js"></script>
     <title>Boxes</title>
 </head>
 
 <body>
 
-    <nav id="top-nav-bar" class="navbar"></nav>
+    <div data-include="navbar"></div>
 
     <main>
         <h1>Boxes</h1>
         <div id="boxes-container"></div>
     </main>
-	<footer id="footer"></footer>
+
+	<div data-include="footer.html"></div>
 
 	<script>
 		// populate the boxes container
