--- a/colors.html
+++ b/colors.html
@@ -6,18 +6,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="styles.css" rel="stylesheet">
 	<script defer src="/script.js"></script>
+	<script defer src="/include.js"></script>
 	<title>Colors</title>
 </head>
 
 <body>
 
-	<nav id="top-nav-bar" class="navbar"></nav>
+	<div data-include="navbar.html"></div>
 
 	<main>
 		<h1>Colors</h1>
 		<div id="colors-container"></div>
 	</main>
-	<footer id="footer"></footer>
+	
+	<div data-include="footer.html"></div>
 	<script>
 		const chars = "0123456789ABCDEF".split('');
 		const colors = [];
