--- a/boxes.html
+++ b/boxes.html
@@ -19,7 +19,7 @@
         <div id="boxes-container"></div>
     </main>
 
-	<div data-include="footer.html"></div>
+	<div data-include="footer"></div>
 
 	<script>
 		// populate the boxes container
