--- a/colors.html
+++ b/colors.html
@@ -12,14 +12,14 @@
 
 <body>
 
-	<div data-include="navbar.html"></div>
+	<div data-include="navbar"></div>
 
 	<main>
 		<h1>Colors</h1>
 		<div id="colors-container"></div>
 	</main>
-	
-	<div data-include="footer.html"></div>
+
+	<div data-include="footer"></div>
 	<script>
 		const chars = "0123456789ABCDEF".split('');
 		const colors = [];
