--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			beatae excepturi, sint distinctio ad voluptatum neque tenetur similique ea id voluptas temporibus cum.
 			Excepturi repellendus vero aut dolorum tempore deleniti voluptates eum mollitia at quam voluptatum
 			recusandae, doloremque suscipit, praesentium voluptas illo corrupti ullam? Debitis pariatur ab nisi officiis
-			non numquam ratione incidunt delectus eos molestiae. Saepe, iusto odio.</p>
+			non numquam ratione incidunt delectus eos molestiae.</p>
 
 	</main>
 	<div data-include="footer"></div>
