moved everything other than the homepage to corresponding subdirectories, also separated the styles for each page

--- a/foo/index.html
+++ b/foo/index.html
@@ -5,15 +5,19 @@
 	<meta charset="utf-8" />
 	<title></title>
 	<style>
-		html {  }
-		body { min-height: 100vh; box-sizing: border-box; }
+		html {}
+
+		body {
+			min-height: 100vh;
+			box-sizing: border-box;
+		}
 	</style>
 </head>
 
 <body>
-	<!-- <header>
+	<header>
 		<h1>This is title</h1>
-	</header> -->
+	</header>
 	<p>
 		Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
 		doloribus ea dicta nostrum sequi, sapiente accusamus cumque
@@ -21,9 +25,9 @@
 		tempora. Iusto excepturi nihil soluta fugit cumque quod
 		exercitationem modi repudiandae?
 	</p>
-	<!-- <main>
+	<main>
 	</main>
-	<footer>Hi 😛</footer> -->
+	<footer>Hi 😛</footer>
 </body>
 
 </html>
