--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="styles.css" rel="stylesheet">
-	<script defer src="./script.js"></script>
-	<script defer src="./include.js"></script>
+	<script defer src="script.js"></script>
+	<script defer src="include.js"></script>
 	<title>Index</title>
 </head>
 
