--- a/colors/index.html
+++ b/colors/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="styles.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 	<script defer src="/script.js"></script>
 	<script defer src="/include.js"></script>
 	<title>Colors</title>
