--- a/test/index.html
+++ b/test/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet">
-	<script defer src="./script.js"></script>
-	<script defer src="./include.js"></script>
-	<script defer src="foo.js"></script>
+	<script defer src="script.js"></script>
+	<!-- for the divs with data-include property -->
+	<script defer src="/include.js"></script>
 	<title>Index</title>
 </head>
 
