now the dot is green and has a label

--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,8 @@
 <body>
 	<div data-include="navbar"></div>
 	<main>
-		<div id="blinking-dot"></div>
+		<div id="blinking-dot"></div> 
+		<span>live update</span>
 		<pre id="disp"></pre>
 	</main>
 	<div data-include="footer"></div>
